infra/traefik/deny-internal-from-internet.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deny-internal-hosts-from-internet-web
  namespace: infra
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      priority: 100000
      match: HostRegexp(`^.+\.home\.?$`) && !ClientIP(`10.0.0.0/8`) && !ClientIP(`100.64.0.0/10`) && !ClientIP(`172.16.0.0/12`) && !ClientIP(`192.168.0.0/16`) && !ClientIP(`127.0.0.0/8`)
      services:
        - kind: TraefikService
          name: noop@internal
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deny-internal-hosts-from-internet-websecure
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      priority: 100000
      match: HostRegexp(`^.+\.home\.?$`) && !ClientIP(`10.0.0.0/8`) && !ClientIP(`100.64.0.0/10`) && !ClientIP(`172.16.0.0/12`) && !ClientIP(`192.168.0.0/16`) && !ClientIP(`127.0.0.0/8`)
      services:
        - kind: TraefikService
          name: noop@internal
  tls: {}
